# PUFfin

./: .gitignore  LICENSE  README.md  configure.py
HCM_Lib/: .cproject  .project  README.md
HCM_Lib/include/: globals.h  hcm.h  types.h
HCM_Lib/include/primitives/: rawapuf.h
HCM_Lib/include/serialcom/: com.h  utils.h
HCM_Lib/src/: hcm.c
HCM_Lib/src/primitives/: rawapuf.c
HCM_Lib/src/serialcom/: com.c  utils.c
components/axi_rawapuf/: build.tcl
components/axi_rawapuf_multi/: build.tcl
components/axi_sysauth/: build.tcl
components/axi_sysauth/vhd/: sysauth_axi_v1_0_S00_AXI.vhd
components/rawapuf/: .build.tcl.swp  build.tcl  package.tcl
components/rawapuf/vhd/: apuf.vhd  arbiter_xorstyle.vhd
components/rocount/: build.tcl
components/rocount/vhd/: Enable_counter.vhd  (+3 more)
components/sysauth/: build.tcl
iprepo/axi_rawapuf/: component.xml
iprepo/axi_rawapuf_multi/: component.xml
iprepo/axi_sysauth/: component.xml
iprepo/raw_apuf/: component.xml
iprepo/rocount/: component.xml
iprepo/sysauth/: component.xml
puffinpy/: README.md  pyproject.toml
puffinpy/src/puffinpy/: __init__.py  _command.py  _commander.py  _settings.py  _sim.py
puffinpy/src/puffinpy/_cli/: _main.py
puffinpy/src/puffinpy/_gui/: TODO.md  _main.py  _structures.py  _windows.py
puffinpy/src/puffinpy/_gui/_layouts/: default.dpg
puffinpy/tests/: test_statistics.py
scripts/apufs/: analyze_responses.py  entropy_analyze.py  rawpuf_placer.py  tunerplacer.py
standalone/ps_apuftune/: build.tcl  build_blockdesign.tcl
standalone/ps_rawapuf/: build.tcl  build_blockdesign.tcl
(+46 files in other folders)
